Adding auth tokens to check against the DB and will allow for an incorrect token to be reomved an then redirected to the login which will fix the DB Error page too

--- a/DashBoard/css/main.css
+++ b/DashBoard/css/main.css
@@ -1,6 +1,6 @@
 /*
  *  Document   : main.css
- *  Author     : pixelcave
+ *  Author     : madjake45
  *  Description: The main stylesheet of the template
  *
  *  Structure (with shortcodes):
