--- a/pugnation.madjake45.com/Style.css
+++ b/pugnation.madjake45.com/Style.css
@@ -1,9 +1,9 @@
 
 img {
-    max-width: 100%;
+    max-width: auto;
     height: auto;
-    max-height: 600px;
-    width: auto \9; /* ie8 */
+    max-height: 500px;
+    width: auto; /* ie8 */
     text-align: center;
 }
 
@@ -11,6 +11,7 @@ img {
     margin-right: auto;
     margin-left: auto;
     text-align: center;
+    max-height: 500px;
 
 }
 
@@ -18,4 +19,8 @@ img {
     max-width: 100%;
     margin-left: auto;
     margin-right: auto;
+}
+
+footer {
+    text-align: center;
 }
